--- a/sources/Performance/Items/Items.API/appsettings.json
+++ b/sources/Performance/Items/Items.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=192.168.20.48,1433;User ID=sa;Password=gRPCExpo_123#;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;"
+  }
 }
