--- a/sources/Performance/Items/Items.Application/Items.Application.csproj
+++ b/sources/Performance/Items/Items.Application/Items.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Items.Domain\Items.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
