--- a/sources/Performance/Items/Items.Infrastructure/Items.Infrastructure.csproj
+++ b/sources/Performance/Items/Items.Infrastructure/Items.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ExternalServices\" />
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
