Resolve mapster dependency conflict

--- a/sources/Performance/Items/Items.Persistence/Items.Persistence.csproj
+++ b/sources/Performance/Items/Items.Persistence/Items.Persistence.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <Reference Include="Common.HttpExceptions">
-      <HintPath>..\..\Common\Common.HttpExceptions\bin\Debug\net9.0\Common.HttpExceptions.dll</HintPath>
+      <HintPath>..\..\Common\Common.HttpExceptions\bin\Release\net9.0\Common.HttpExceptions.dll</HintPath>
     </Reference>
   </ItemGroup>
 
