--- a/sources/Performance/Items/Items.Grpc/Properties/launchSettings.json
+++ b/sources/Performance/Items/Items.Grpc/Properties/launchSettings.json
@@ -2,29 +2,24 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5122"
+      "applicationUrl": "http://localhost:5292"
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,  
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7209;http://localhost:5122"
+      "applicationUrl": "https://localhost:7280;http://localhost:5292"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      //"launchUrl": "{Scheme}://192.168.20.48:{ServicePort}/swagger",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
