add docker compose

--- a/sources/Performance/Items/Items.API/Items.API.csproj
+++ b/sources/Performance/Items/Items.API/Items.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>b52bd403-1fd4-4c06-848a-5b9b7cc9e67a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
