--- a/sources/Performance/Clients/Clients.API/Clients.API.csproj
+++ b/sources/Performance/Clients/Clients.API/Clients.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -22,16 +22,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Common.HttpExceptions">
-      <HintPath>..\..\Common\Common.HttpExceptions\bin\Debug\net9.0\Common.HttpExceptions.dll</HintPath>
-    </Reference>
-    <Reference Include="Common.MassTransit.Contracts">
-      <HintPath>..\..\Common\Common.MassTransit.Contracts\bin\Debug\net9.0\Common.MassTransit.Contracts.dll</HintPath>
-    </Reference>
+    <Protobuf Include="Protos\item.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\bitacora.proto" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\item.proto" GrpcServices="Client" />
+    <Reference Include="Common.HttpExceptions">
+      <HintPath>..\..\Common\Common.HttpExceptions\bin\Release\net9.0\Common.HttpExceptions.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.MassTransit.Contracts">
+      <HintPath>..\..\Common\Common.MassTransit.Contracts\bin\Release\net9.0\Common.MassTransit.Contracts.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
