--- a/sources/Performance/Clients/Clients.API/Properties/launchSettings.json
+++ b/sources/Performance/Clients/Clients.API/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "Container (Dockerfile)": {
       "commandName": "Docker",  
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/Items",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
