--- a/sources/Performance/Items/Items.Tests/Items.Tests.csproj
+++ b/sources/Performance/Items/Items.Tests/Items.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
@@ -24,7 +25,16 @@
     <Folder Include="IntegrationTests\Persistence\" />
     <Folder Include="UnitTests\Application\" />
     <Folder Include="UnitTests\Domain\" />
-    <Folder Include="UnitTests\Persistence\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Items.Persistence\Items.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Common.HttpExceptions">
+      <HintPath>..\..\Common\Common.HttpExceptions\bin\Release\net9.0\Common.HttpExceptions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
